# agent-images

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-bake.hcl  lefthook.yml  mise.toml  pyproject.toml  taplo.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  images.yml  security.yml
docs/: CLAUDE.md  architecture.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/build-guide/: index.md
docs/src/content/docs/developer-guide/: index.md
docs/src/content/docs/getting-started/: index.md
docs/src/content/docs/operator-guide/: index.md
docs/src/content/docs/reference/: architecture.md  index.md
docs/src/styles/: custom.css
images/base-mise/: Dockerfile
images/infra-agent-dev/: Dockerfile
images/jvm-agent-dev/: Dockerfile
images/monorepo-agent-dev/: Dockerfile
images/node-agent-dev/: Dockerfile
images/python-agent-dev/: Dockerfile
images/security-agent-dev/: Dockerfile
images/software-agent-polyglot/: Dockerfile
images/software-agent-polyglot/mcp/: context7.json
mise/: agent-harness.toml  base.toml  infra-agent.toml  jvm-agent.toml  monorepo-agent.toml  node-agent.toml  polyglot.toml  python-agent.toml  security-agent.toml
scripts/: check_commit_msg.py  merge_mise.py
src/agent_images/: __init__.py
src/erpaval/: __init__.py
tests/: test_merge_mise.py  test_version.py
