[project]
name = "erpaval"
version = "0.1.0"
description = "ERPAVal — Explore, Research, Plan, Act, Validate methodology toolkit."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Laith Al-Saadoon", email = "lalsaado@amazon.com" }]
keywords = ["agentic", "coding-agent", "methodology", "erpaval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lalsaado/erpaval"
Repository = "https://github.com/lalsaado/erpaval"
Issues = "https://github.com/lalsaado/erpaval/issues"
Changelog = "https://github.com/lalsaado/erpaval/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erpaval"]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "ty>=0.0.1a8",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-randomly>=3.16.0",
  "hypothesis>=6.123.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",     # pycodestyle, pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # bugbear
  "A",     # builtins shadowing
  "C4",    # comprehensions
  "SIM",   # simplify
  "TID",   # tidy imports
  "PT",    # pytest style
  "RET",   # return
  "RUF",   # ruff-specific
  "S",     # bandit security
  "ASYNC", # async-correctness
  "PERF",  # perflint
  "FURB",  # refurb
  "TRY",   # tryceratops
  "ARG",   # unused-arguments
  "PTH",   # pathlib
  "ERA",   # eradicate
]
ignore = [
  "E501", # line length handled by formatter
  "S101", # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "error"
invalid-type-form = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=erpaval",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/erpaval"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
